force-app/main/default/objects/Apttus__WizardRule2__c/Apttus__WizardRule2__c.object-meta.xml
<CustomObject>
    <description>Individual rules which are applied within a ruleset.</description>
    <label>Wizard Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>