force-app/main/default/objects/Apttus__WizardRule2__c/fields/Apttus__ComparisonOperator__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ComparisonOperator__c</fullName>
    <description>Comparison operator used in the expression condition like equal to, contains, starts with etc</description>
    <inlineHelpText>Comparison operator used in the expression condition like equal to, contains, starts with etc</inlineHelpText>
    <label>Comparison Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equal to</fullName>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less than or equal to</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater than or equal to</fullName>
            </value>
            <value>
                <fullName>includes</fullName>
            </value>
            <value>
                <fullName>excludes</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>does not start with</fullName>
            </value>
            <value>
                <fullName>ends with</fullName>
            </value>
            <value>
                <fullName>does not end with</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>