force-app/main/default/objects/Apttus__WizardRule2__c/fields/Apttus__FromInputControlId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FromInputControlId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Input control on which this rule is to be applied in an expression to determine based upon the rule type the outcome value.</description>
    <inlineHelpText>The Input control on which this rule is to be applied in an expression to determine based upon the rule type the outcome value.</inlineHelpText>
    <label>Wizard Input Control</label>
    <referenceTo>Apttus__WizardInputControl2__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>