force-app/main/default/objects/Apttus__WizardRule2__c/fields/Apttus__LongValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus__LongValue__c</fullName>
    <description>Holds long value</description>
    <inlineHelpText>Holds long value</inlineHelpText>
    <label>Long Value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>