force-app/main/default/objects/Apttus__WizardRule2__c/fields/Apttus__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Sequence__c</fullName>
    <description>Sequence of rule within a ruleset</description>
    <inlineHelpText>Sequence of rule within a ruleset</inlineHelpText>
    <label>Sequence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>