force-app/main/default/objects/Apttus__WizardRule2__c/fields/Apttus__WizardRulesetId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardRulesetId__c</fullName>
    <description>Master-detail to wizard ruleset this rule belongs to</description>
    <inlineHelpText>Master-detail to wizard ruleset this rule belongs to</inlineHelpText>
    <label>Wizard Ruleset</label>
    <referenceTo>Apttus__WizardRuleset2__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>